Ensure more spacing between app header and text on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -82,7 +82,7 @@ $fh-height: 50px;
 	}
     }
     .simple-container {
-	margin-top: 10px;
+	padding-top: 10px;
 	header {
 	    text-align: center;
 	}
